# infra

./: Cargo.toml  README.md  build.sh
src/: error.rs  main.rs  prelude.rs  settings.rs
src/cmds/: net.rs  secure.rs  ssh.rs  sync.rs  system.rs  user.rs
src/commands/: mod.rs  net.rs  secure.rs  ssh.rs  sync.rs  system.rs  user.rs
src/share/: mod.rs  remote_host.rs  sync_config.rs
