[package]
name = "infra"
edition = "2024"

[dependencies]
atoman = { version = "0.4.2", features = ["config", "logger"] }
macron = { version = "0.4.0", features = ["full"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
